--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="com.watermelon.moviesapp.ui.tv.StreamTypes"/>
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.tv.TvViewModel" />
@@ -14,11 +15,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loading"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:elevation="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/loading"
+            app:showWhenLoading="@{viewModel.stream}"
+            tools:visibility="gone" />
+
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin2x"
             android:padding="6dp"
+            android:visibility="invisible"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
             android:background="@drawable/shape_arrow"
             android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
@@ -42,10 +59,11 @@
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chip_group"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin2x"
-            style="@style/Widget.MaterialComponents.Chip.Choice"
+            app:singleSelection="true"
+            app:selectionRequired="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
@@ -54,22 +72,40 @@
             <com.google.android.material.chip.Chip
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/dark_chip"
+                android:checked="true"
+                app:stream="@{viewModel.onTheAir}"
+                app:viewModel="@{viewModel}"
+                app:textStartPadding="@dimen/margin16dp"
+                style="@style/Widget.MyApp.Chip.Choice"
                 android:textColor="@color/white"
-                android:text="@string/trending"/>
+                android:text="@string/now"/>
 
             <com.google.android.material.chip.Chip
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/dark_chip"
+                app:stream="@{viewModel.airingToday}"
+                app:viewModel="@{viewModel}"
+                app:textStartPadding="@dimen/margin16dp"
+                style="@style/Widget.MyApp.Chip.Choice"
+                android:textColor="@color/white"
+                android:text="@string/today"/>
+
+            <com.google.android.material.chip.Chip
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                app:stream="@{viewModel.popular}"
+                app:viewModel="@{viewModel}"
+                style="@style/Widget.MyApp.Chip.Choice"
                 android:textColor="@color/white"
                 android:text="@string/popular"/>
 
             <com.google.android.material.chip.Chip
                 android:layout_width="80dp"
                 app:chipStartPadding="10dp"
+                app:stream="@{viewModel.topRated}"
+                app:viewModel="@{viewModel}"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/base_color"
+                style="@style/Widget.MyApp.Chip.Choice"
                 android:textColor="@color/white"
                 android:text="@string/rated"/>
 
@@ -80,7 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            app:items="@{viewModel.tvShowChannel.toData().results}"
+            app:items="@{viewModel.stream.toData().results}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
             app:layout_constraintBottom_toBottomOf="parent"
