--- a/app/src/main/res/layout/fragment_tv_shows_actor.xml
+++ b/app/src/main/res/layout/fragment_tv_shows_actor.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.ui.tv.TvViewModel" />
+            type="com.watermelon.moviesapp.ui.profile.tv_shows.TvShowsActorViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
