--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -15,4 +15,15 @@
         <item name="cornerSize">10%</item>
     </style>
 
+    <style name="Widget.MyApp.Chip.Choice" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="chipBackgroundColor">@color/chip_state</item>
+        <item name="materialThemeOverlay">@style/ThemeOverlay.MyApp.Chip.Choice</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="rippleColor">@color/base_color</item>
+    </style>
+
+    <style name="ThemeOverlay.MyApp.Chip.Choice" parent="">
+        <item name="elevationOverlayEnabled">false</item>
+    </style>
+
 </resources>
