--- a/app/src/main/res/layout/item_tv.xml
+++ b/app/src/main/res/layout/item_tv.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.tv.Season" />
+            type="com.watermelon.moviesapp.model.response.tv.TV" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin4dp"
                 android:layout_marginEnd="@dimen/margin1x"
-                android:text="@{item.name}"
+                android:text="@{item.voteAverage.toString()}"
                 android:background="@drawable/shape_rate"
                 android:elevation="4dp"
                 android:textColor="@color/white"
