--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -86,7 +86,7 @@
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/person_name"
-            tools:text="Action" />
+            android:text="Action" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
