--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -50,6 +50,18 @@
         <argument
             android:name="personId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_profileFragment_to_aboutFragment"
+            app:destination="@id/aboutFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.watermelon.moviesapp.ui.profile.about.AboutFragment"
+        android:label="AboutFragment"
+        tools:layout="@layout/fragment_about_actor">
+        <argument
+            android:name="personId"
+            app:argType="integer" />
     </fragment>
 
 </navigation>
