--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -22,4 +22,9 @@
         android:icon="@drawable/ic_baseline_trending_up_24"
         android:title="@string/trending"
         android:color="@color/base_color"/>
+    <item
+        android:id="@+id/categoriesFragment"
+        android:icon="@drawable/ic_baseline_trending_up_24"
+        android:title="categories"
+        android:color="@color/base_color"/>
 </menu>
