--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -1,9 +1,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.watermelon.moviesapp.ui.categories.CategoriesFragment"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.watermelon.moviesapp.ui.categories.CategoriesFragment">
 
     <data>
+
+        <variable
+            name="viewModel"
+            type="com.watermelon.moviesapp.ui.categories.CategoriesViewModel" />
+
 
     </data>
 
@@ -15,27 +20,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin2x"
-            android:padding="6dp"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
             android:background="@drawable/shape_arrow"
+            android:padding="6dp"
             android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
+            app:layout_constraintBottom_toBottomOf="@id/title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/title"
-            app:layout_constraintBottom_toBottomOf="@id/title"/>
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />
 
         <TextView
             android:id="@+id/title"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin2x"
+            android:gravity="center"
+            android:text="@string/categories"
             android:textColor="@color/base_color"
             android:textSize="26sp"
+
             android:textStyle="bold"
-            android:layout_margin="@dimen/margin2x"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="@string/categories"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/categories_recycler"
@@ -43,10 +49,11 @@
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/margin2x"
             android:orientation="vertical"
+            app:items="@{viewModel.genres.toData().genres}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintEnd_toEndOf="@id/title"
+            app:layout_constraintStart_toStartOf="@id/title"
             app:layout_constraintTop_toBottomOf="@id/title"
             tools:listitem="@layout/item_categories" />
 
