--- a/app/src/main/res/layout/item_movies_actor.xml
+++ b/app/src/main/res/layout/item_movies_actor.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.movie.Movie" />
+            type="com.watermelon.moviesapp.model.response.movieCredits.Cast" />
 
         <variable
             name="listener"
