--- a/app/src/main/res/layout/fragment_about_actor.xml
+++ b/app/src/main/res/layout/fragment_about_actor.xml
@@ -73,7 +73,7 @@
             android:id="@+id/is_alive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Alive"
+            android:text="@string/alive"
             android:textColor="@color/white"
             android:layout_marginTop="@dimen/margin16dp"
             android:layout_marginStart="@dimen/margin16dp"
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/archivo_black"
-            android:text="Biography"
+            android:text="@string/biography"
             android:textColor="@color/base_color"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="@+id/alive_icon"
