--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,15 +7,13 @@
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.details.DetailsViewModel" />
-
     </data>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_constraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background_color"
-        app:layoutDescription="@xml/fragment_details_xml_main_constraint_scene">
+        android:background="@color/backgruond_color" >
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/loading"
@@ -35,7 +33,7 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/movie_poster"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="600dp"
             android:scaleType="centerCrop"
             app:image="@{viewModel.movieDetails.toData().posterPath}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,126 +42,163 @@
             app:showWhenSuccess="@{viewModel.movieDetails}"
             tools:src="@tools:sample/avatars" />
 
-        <View
-            android:id="@+id/view5"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:background="@drawable/movie_image_gradient"
-            app:layout_constraintBottom_toBottomOf="@id/movie_poster"
-            app:layout_constraintEnd_toEndOf="@id/movie_poster"
-            app:layout_constraintStart_toStartOf="@id/movie_poster"
-            app:layout_constraintTop_toTopOf="@id/movie_poster" />
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/move_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/archivo_black"
-            android:text="@{viewModel.movieDetails.toData().title}"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/play_icon"
-            app:showWhenSuccess="@{viewModel.movieDetails}" />
+                <ScrollView
+                    android:id="@+id/details_movie"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-        <TextView
-            android:id="@+id/move_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="35dp"
-            android:fontFamily="@font/basic"
-            android:lines="2"
-            android:text="@{viewModel.movieDetails.toData().overview}"
-            android:textColor="@color/gray_text_color"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/move_name"
-            app:showWhenSuccess="@{viewModel.movieDetails}"
-            tools:text="TextView  TextView  TextView  TextView  TextView  TextView  TextView  TextView  " />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/details_shape"
+                    android:elevation="@dimen/elevation8"
+                    android:orientation="vertical"
+                    android:paddingTop="@dimen/padding24dp"
+                    android:paddingBottom="@dimen/padding32dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:id="@+id/director"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/director"
-            android:textColor="@color/blue_text_color"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/move_description" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/director_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/dash"
-            android:textColor="@color/gray_text_color"
-            app:layout_constraintStart_toEndOf="@+id/director"
-            app:layout_constraintTop_toBottomOf="@+id/move_description" />
+                        <ImageView
+                            android:layout_width="18dp"
+                            android:layout_height="18dp"
+                            android:src="@drawable/ic_baseline_star_24" />
 
-        <TextView
-            android:id="@+id/Writers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/writer"
-            android:textColor="@color/blue_text_color"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/director" />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="8.7"
+                            android:textSize="@dimen/text12sp"
+                            android:textColor="@color/primary_text_color"
+                            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/writers_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/dash"
-            android:textColor="@color/gray_text_color"
-            app:layout_constraintStart_toEndOf="@+id/Writers"
-            app:layout_constraintTop_toBottomOf="@+id/director_name" />
+                    </LinearLayout>
 
-        <ImageView
-            android:id="@+id/play_icon"
-            android:layout_width="56dp"
-            android:layout_height="57dp"
-            android:layout_marginEnd="35dp"
-            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_play_video" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:text="@{viewModel.movieDetails.toData().title}"
+                        android:textColor="@color/primary_text_color"
+                        android:textSize="@dimen/text28sp"
+                        android:textStyle="bold"
+                        tools:text="Movies Name" />
 
-        <TextView
-            android:id="@+id/the_cast"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/archivo_black"
-            android:text="@string/the_cast"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Writers" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:layout_marginTop="@dimen/margin4dp"
+                        android:text="@{viewModel.movieDetails.toData().releaseDate + ` . ` + viewModel.movieDetails.toData().status +` . ( `+viewModel.movieDetails.toData().originalLanguage+` )`}"
+                        android:textAllCaps="true"
+                        android:textColor="@color/primary_text_color"
+                        android:textStyle="bold"
+                        tools:text="1995-10-20 . Released . (EN)" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_cast"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal"
-            app:items="@{viewModel.credits.toData().cast}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/the_cast"
-            app:showWhenSuccess="@{viewModel.credits}"
-            tools:listitem="@layout/item_cast" />
+                    <com.google.android.material.chip.ChipGroup
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:theListForChips="@{viewModel.movieDetails.toData().genres}"
+                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:checked="false"
+                        android:layout_marginTop="@dimen/margin8dp"
+                        android:orientation="horizontal"/>
 
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:layout_marginTop="@dimen/margin16dp"
+                        android:background="@color/backgruond_color"
+                        android:padding="@dimen/margin24dp"
+                        app:cardCornerRadius="@dimen/radius16"
+                        app:cardElevation="4dp">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:lineHeight="18dp"
+                            android:padding="@dimen/padding16dp"
+                            android:text="@{viewModel.movieDetails.toData().overview}"
+                            android:textColor="@color/primary_text_color"
+                            tools:text="The film centers on the love relationship among the band's bassist Haruki Nakayama, drummer Akihiko Kaji, and Akihiko's   roommate and ex-boyfriend Ugetsu Murata." />
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/padding24dp"
+                        android:layout_marginTop="@dimen/padding16dp"
+                        android:text="Cast"
+                        android:textColor="@color/primary_text_color"
+                        android:textSize="@dimen/text20sp"
+                        android:textStyle="bold" />
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_cast"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/padding28dp"
+                        app:items="@{viewModel.credits.toData().cast}"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:showWhenSuccess="@{viewModel.credits}"
+                        tools:listitem="@layout/item_cast" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin24dp"
+                        android:layout_marginTop="@dimen/padding24dp"
+                        android:text="Similar Movie"
+                        android:textColor="@color/primary_text_color"
+                        android:textSize="@dimen/text20sp"
+                        android:textStyle="bold" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_similar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:clipToPadding="false"
+                        android:orientation="horizontal"
+                        android:paddingHorizontal="@dimen/padding28dp"
+                        app:items="@{viewModel.similarMovies.toData().movies}"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        app:showWhenSuccess="@{viewModel.similarMovies}"
+                        tools:listitem="@layout/item_cast" />
+
+                </LinearLayout>
+
+                </ScrollView>
+
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
+
