--- a/app/src/main/res/layout/item_similar_movies.xml
+++ b/app/src/main/res/layout/item_similar_movies.xml
@@ -6,7 +6,8 @@
     <data>
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.credits.Cast" />
+            type="com.watermelon.moviesapp.model.response.Movies" />
+
         <variable
             name="listener"
             type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
@@ -25,7 +26,7 @@
             android:layout_height="120dp"
             android:scaleType="centerCrop"
             android:onClick="@{() -> listener.onCastClicked(item.id)}"
-            app:image="@{item.profilePath}"
+            app:image="@{item.posterPath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,11 +37,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="@string/app_name"
+            android:singleLine="true"
             android:paddingTop="@dimen/margin2dp"
             android:layout_marginHorizontal="@dimen/margin4dp"
-            android:text="@{item.name}"
-            android:textColor="@color/primary_text_color"
-            />
+            android:text="@{item.title}"
+            android:textColor="@color/primary_text_color" />
 
     </LinearLayout>
 
