add include in details fragment

--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -55,144 +55,7 @@
                     android:layout_height="match_parent"
                     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/details_shape"
-                    android:elevation="@dimen/elevation8"
-                    android:orientation="vertical"
-                    android:paddingTop="@dimen/padding24dp"
-                    android:paddingBottom="@dimen/padding32dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="18dp"
-                            android:layout_height="18dp"
-                            android:src="@drawable/ic_baseline_star_24" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="8.7"
-                            android:textSize="@dimen/text12sp"
-                            android:textColor="@color/primary_text_color"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:text="@{viewModel.movieDetails.toData().title}"
-                        android:textColor="@color/primary_text_color"
-                        android:textSize="@dimen/text28sp"
-                        android:textStyle="bold"
-                        tools:text="Movies Name" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:layout_marginTop="@dimen/margin4dp"
-                        android:text="@{viewModel.movieDetails.toData().releaseDate + ` . ` + viewModel.movieDetails.toData().status +` . ( `+viewModel.movieDetails.toData().originalLanguage+` )`}"
-                        android:textAllCaps="true"
-                        android:textColor="@color/primary_text_color"
-                        android:textStyle="bold"
-                        tools:text="1995-10-20 . Released . (EN)" />
-
-                    <com.google.android.material.chip.ChipGroup
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:theListForChips="@{viewModel.movieDetails.toData().genres}"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:checked="false"
-                        android:layout_marginTop="@dimen/margin8dp"
-                        android:orientation="horizontal"/>
-
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:layout_marginTop="@dimen/margin16dp"
-                        android:background="@color/backgruond_color"
-                        android:padding="@dimen/margin24dp"
-                        app:cardCornerRadius="@dimen/radius16"
-                        app:cardElevation="4dp">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:lineHeight="18dp"
-                            android:padding="@dimen/padding16dp"
-                            android:text="@{viewModel.movieDetails.toData().overview}"
-                            android:textColor="@color/primary_text_color"
-                            tools:text="The film centers on the love relationship among the band's bassist Haruki Nakayama, drummer Akihiko Kaji, and Akihiko's   roommate and ex-boyfriend Ugetsu Murata." />
-
-                    </androidx.cardview.widget.CardView>
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/padding24dp"
-                        android:layout_marginTop="@dimen/padding16dp"
-                        android:text="Cast"
-                        android:textColor="@color/primary_text_color"
-                        android:textSize="@dimen/text20sp"
-                        android:textStyle="bold" />
-
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recycler_cast"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:clipToPadding="false"
-                        android:orientation="horizontal"
-                        android:paddingHorizontal="@dimen/padding28dp"
-                        app:items="@{viewModel.credits.toData().cast}"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:showWhenSuccess="@{viewModel.credits}"
-                        tools:listitem="@layout/item_cast" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin24dp"
-                        android:layout_marginTop="@dimen/padding24dp"
-                        android:text="Similar Movie"
-                        android:textColor="@color/primary_text_color"
-                        android:textSize="@dimen/text20sp"
-                        android:textStyle="bold" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recycler_similar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:clipToPadding="false"
-                        android:orientation="horizontal"
-                        android:paddingHorizontal="@dimen/padding28dp"
-                        app:items="@{viewModel.similarMovies.toData().movies}"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        app:showWhenSuccess="@{viewModel.similarMovies}"
-                        tools:listitem="@layout/item_cast" />
-
-                </LinearLayout>
+                <include layout="@layout/details_layout" />
 
                 </ScrollView>
 
