feat: make actor tv shows work

--- a/app/src/main/res/layout/fragment_tv_shows_actor.xml
+++ b/app/src/main/res/layout/fragment_tv_shows_actor.xml
@@ -3,6 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
+        <variable
+            name="viewModel"
+            type="com.watermelon.moviesapp.ui.profile.tv_shows.TvShowsActorViewModel" />
+
 
     </data>
 
@@ -15,6 +19,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
+            app:items="@{viewModel.tvCredits.toData().cast}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
