--- a/app/src/main/res/layout/fragment_about_actor.xml
+++ b/app/src/main/res/layout/fragment_about_actor.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.watermelon.moviesapp.ui.profile.ProfileViewModel" />
+            type="com.watermelon.moviesapp.ui.profile.about.AboutViewModel" />
 
     </data>
 
