fix: add popular fragment to navigation and reorder it

--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -18,7 +18,7 @@
         android:title="@string/tv"
         android:color="@color/base_color"/>
     <item
-        android:id="@+id/trendingFragment"
+        android:id="@+id/popularFragment"
         android:icon="@drawable/ic_baseline_trending_up_24"
         android:title="@string/trending"
         android:color="@color/base_color"/>
