--- a/app/src/main/res/layout/fragment_about_actor.xml
+++ b/app/src/main/res/layout/fragment_about_actor.xml
@@ -101,19 +101,30 @@
             app:layout_constraintStart_toStartOf="@+id/text_biography"
             app:layout_constraintTop_toBottomOf="@+id/text_biography" />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:id="@+id/verticalScrollView"
+            android:layout_marginTop="16dp"
+            android:scrollbars="vertical"
+            android:scrollbarStyle="outsideInset"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_biography" >
+
         <TextView
             android:id="@+id/biography"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="@dimen/margin16dp"
+            android:layout_height="wrap_content"
             android:text="@{viewModel.person.toData().biography}"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_biography" />
-
+            android:ellipsize="end"
+            android:maxLines="4"
+            android:scrollbars="vertical"
+            app:showMoreTextLines="@{viewModel.person.toData().biography}" />
+            </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
