--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -52,7 +52,7 @@
                 <ScrollView
                     android:id="@+id/details_movie"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
                 <LinearLayout
@@ -120,7 +120,6 @@
                         android:layout_marginTop="@dimen/margin8dp"
                         android:orientation="horizontal"/>
 
-
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -142,17 +141,16 @@
 
                     </androidx.cardview.widget.CardView>
 
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/padding24dp"
                         android:layout_marginTop="@dimen/padding16dp"
                         android:text="Cast"
+                        app:isNotNull="@{viewModel.credits.toData().cast[0]}"
                         android:textColor="@color/primary_text_color"
                         android:textSize="@dimen/text20sp"
                         android:textStyle="bold" />
-
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_cast"
