--- a/app/src/main/res/layout/item_production_companies_tv.xml
+++ b/app/src/main/res/layout/item_production_companies_tv.xml
@@ -6,38 +6,42 @@
     <data>
         <variable
             name="item"
-            type="com.watermelon.moviesapp.model.response.credits.Cast" />
+            type="com.watermelon.moviesapp.model.response.tv.details.ProductionCompany" />
         <variable
             name="listener"
             type="com.watermelon.moviesapp.ui.home.MovieInteractionListener" />
     </data>
 
     <LinearLayout
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginHorizontal="@dimen/margin4dp"  >
+        android:layout_marginHorizontal="@dimen/margin4dp"
+        >
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/item_cast"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:scaleType="centerCrop"
-            android:onClick="@{() -> listener.onCastClicked(item.id)}"
-            app:imageCast="@{item.profilePath}"
+            app:image="@{item.logoPath}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
             tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             tools:text="@string/app_name"
-            android:paddingTop="@dimen/margin2dp"
+            android:singleLine="true"
+            android:lines="1"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin4dp"
             android:layout_marginHorizontal="@dimen/margin4dp"
             android:text="@{item.name}"
+            android:textSize="@dimen/text16sp"
             android:textColor="@color/primary_text_color"
             />
 
