--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="status_bar_color">#39424A</color>
 
     <color name="primary_text_color">#393939</color>
+    <color name="secondary_text_color">#8B8B8B</color>
 
     <color name="blue_text_color">#2f6688</color>
     <color name="gray_text_color">#75787b</color>
