fix: tv recycler margin

--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -60,7 +60,7 @@
             android:id="@+id/chip_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin2x"
+            android:layout_margin="@dimen/margin1x"
             app:singleSelection="true"
             app:selectionRequired="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -115,12 +115,13 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
+            android:layout_margin="@dimen/margin1x"
             app:items="@{viewModel.stream.toData().results}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="3"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@id/chip_group"
-            app:layout_constraintEnd_toEndOf="@id/chip_group"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/chip_group"
             tools:listitem="@layout/item_tv" />
 
